@@ -28,6 +28,7 @@ Here is a summary of the main changes in this release (see handbook for full det
 	* Scroll wheel zoom now works for view window too
 	* Zoom is now up to 8000%
 	* "Hide image" and "View alpha as an overlay" can now be toggled separately for each layer (Preferences->General->Enable overlays by layer)
+	* Colours A and B now highlighted in palette window
 	* New image format PMM (Portable MultiMap) added for interoperable storage and exchange of images : See handbook section A.2.4 for details
 	* XPM files with 65-92 colours are now saved with smaller size
 	* Raw RGB palette files (6-bit PAL and 8-bit ACT) can now be loaded/saved via the Palette menu
@@ -42,6 +43,7 @@ Here is a summary of the main changes in this release (see handbook for full det
 	* "Scale canvas" and "Resize canvas" now remember their aspect ratio toggle setting
 	* The Free Rotate window now remembers the previous rotation angle in that mtPaint session
 	* Dock area state is now remembered across sessions (unless opened automatically, for multiple files on command line)
+	* Unmaximized window position and size are now remembered across sessions
 	* Alpha values for colours A & B are now displayed on settings toolbar when editing image with alpha in coupled alpha mode
 	* Undo system now uses a bit less memory
 	* Initial undo memory size is now 1/4 of available memory
@@ -57,6 +59,7 @@ Here is a summary of the main changes in this release (see handbook for full det
 	* BUGFIX - All keyboard shortcuts now work in Image View mode, as they should
 	* BUGFIX - Transparent colour in composite images now works again
 	* BUGFIX - Flood fill with shapeburst gradient now works again
+	* BUGFIX - Flood fill with pattern now works when starting on colour A
 	* BUGFIX - Saving LSS16 images no longer produces broken files in certain rare cases
 	* BUGFIX - PAM files with type BLACKANDWHITE are no longer loaded as grayscale (except if written as grayscale - ImageMagick does that)
 	* BUGFIX - SVG files starting with "<!DOCTYPE" no longer fail to load
